--- a/Robert_Testing.ipynb
+++ b/Robert_Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "5924c4f7-2974-4f09-a3f8-c5c2e3121b5b",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "2a6c99f1-e21d-4b2e-a8d1-8e7cc1156cc1",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "65763d53-759e-4eb4-ac5c-dc30d82f7f38",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "51982133-2676-4cf9-9076-bae4f68a2630",
    "metadata": {},
    "outputs": [],
@@ -125,6 +125,20 @@
     "    score = accuracy_score(y_test,pred)\n",
     "    return score\n",
     "\n",
+    "def SVC_rbf_train_acc(df, C=10, avg_depth=20, var_depth=10, hs_avg_depth=20, hs_var_depth=10, calvin_Features=True, peak=True, crit=False):\n",
+    "    X=truncate_mfcc(df=df, avg_depth=avg_depth,var_depth=var_depth,hs_avg_depth=hs_avg_depth,hs_var_depth=hs_var_depth,calvin_Features=calvin_Features,peak=True)\n",
+    "    if crit:\n",
+    "        Y = df['critter_name']\n",
+    "    else:\n",
+    "        Y = df['fam_or_subfam']\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X.copy(), Y, shuffle=True, random_state=17, test_size=.2, stratify=Y)\n",
+    "    knn_pipe = Pipeline([('scale', StandardScaler()), ('svc_rbf',SVC(kernel='rbf', C=C))])\n",
+    "    knn_pipe.fit(X_train, y_train)\n",
+    "    pred = knn_pipe.predict(X_train)\n",
+    "    score = accuracy_score(y_train,pred)\n",
+    "    return score\n",
+    "\n",
+    "\n",
     "#Same as above but only predicting critter name (but training on fam_or_subfam)\n",
     "def SVC_rbf_test_acc_on_crit(df, C=10, avg_depth=20, var_depth=10, hs_avg_depth=20, hs_var_depth=10, calvin_Features=True, peak=True, crit=False):\n",
     "    X=truncate_mfcc(df=df, avg_depth=avg_depth,var_depth=var_depth,hs_avg_depth=hs_avg_depth,hs_var_depth=hs_var_depth,calvin_Features=calvin_Features,peak = peak)\n",
@@ -152,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "0e2021c0-e221-4d67-92d4-490f0d970247",
    "metadata": {},
    "outputs": [
@@ -160,46 +174,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "knn Test Accuracy when mfcc depth = 12 and k = 1: 0.6449152542372881\n",
-      "knn Test Accuracy when mfcc depth = 12 and k = 2: 0.6237288135593221\n",
-      "knn Test Accuracy when mfcc depth = 12 and k = 3: 0.6288135593220339\n",
-      "knn Test Accuracy when mfcc depth = 12 and k = 4: 0.6432203389830509\n",
-      "knn Test Accuracy when mfcc depth = 12 and k = 5: 0.6601694915254237\n",
-      "knn Test Accuracy when mfcc depth = 12 and k = 6: 0.6432203389830509\n",
-      "knn Test Accuracy when mfcc depth = 12 and k = 7: 0.6440677966101694\n",
-      "knn Test Accuracy when mfcc depth = 12 and k = 8: 0.6330508474576271\n",
-      "knn Test Accuracy when mfcc depth = 12 and k = 9: 0.6305084745762712\n",
-      "knn Test Accuracy when mfcc depth = 12 and k = 10: 0.6330508474576271\n",
-      "knn Test Accuracy when mfcc depth = 13 and k = 1: 0.6398305084745762\n",
-      "knn Test Accuracy when mfcc depth = 13 and k = 2: 0.614406779661017\n",
-      "knn Test Accuracy when mfcc depth = 13 and k = 3: 0.6398305084745762\n",
-      "knn Test Accuracy when mfcc depth = 13 and k = 4: 0.6457627118644068\n",
-      "knn Test Accuracy when mfcc depth = 13 and k = 5: 0.6559322033898305\n",
-      "knn Test Accuracy when mfcc depth = 13 and k = 6: 0.6491525423728813\n",
-      "knn Test Accuracy when mfcc depth = 13 and k = 7: 0.6466101694915254\n",
-      "knn Test Accuracy when mfcc depth = 13 and k = 8: 0.6372881355932203\n",
-      "knn Test Accuracy when mfcc depth = 13 and k = 9: 0.6372881355932203\n",
-      "knn Test Accuracy when mfcc depth = 13 and k = 10: 0.6322033898305085\n",
-      "knn Test Accuracy when mfcc depth = 14 and k = 1: 0.6347457627118644\n",
-      "knn Test Accuracy when mfcc depth = 14 and k = 2: 0.6161016949152542\n",
-      "knn Test Accuracy when mfcc depth = 14 and k = 3: 0.6330508474576271\n",
-      "knn Test Accuracy when mfcc depth = 14 and k = 4: 0.6449152542372881\n",
-      "knn Test Accuracy when mfcc depth = 14 and k = 5: 0.6449152542372881\n",
-      "knn Test Accuracy when mfcc depth = 14 and k = 6: 0.6338983050847458\n",
-      "knn Test Accuracy when mfcc depth = 14 and k = 7: 0.6305084745762712\n",
-      "knn Test Accuracy when mfcc depth = 14 and k = 8: 0.6313559322033898\n",
-      "knn Test Accuracy when mfcc depth = 14 and k = 9: 0.6415254237288136\n",
-      "knn Test Accuracy when mfcc depth = 14 and k = 10: 0.6432203389830509\n",
-      "knn Test Accuracy when mfcc depth = 15 and k = 1: 0.6508474576271186\n",
-      "knn Test Accuracy when mfcc depth = 15 and k = 2: 0.6152542372881356\n",
-      "knn Test Accuracy when mfcc depth = 15 and k = 3: 0.6372881355932203\n",
-      "knn Test Accuracy when mfcc depth = 15 and k = 4: 0.6415254237288136\n",
-      "knn Test Accuracy when mfcc depth = 15 and k = 5: 0.6440677966101694\n",
-      "knn Test Accuracy when mfcc depth = 15 and k = 6: 0.6423728813559322\n",
-      "knn Test Accuracy when mfcc depth = 15 and k = 7: 0.635593220338983\n",
-      "knn Test Accuracy when mfcc depth = 15 and k = 8: 0.635593220338983\n",
-      "knn Test Accuracy when mfcc depth = 15 and k = 9: 0.6398305084745762\n",
-      "knn Test Accuracy when mfcc depth = 15 and k = 10: 0.6398305084745762\n"
+      "knn Test Accuracy when mfcc depth = 12 and k = 1: 0.8923728813559322\n",
+      "knn Test Accuracy when mfcc depth = 12 and k = 2: 0.9\n",
+      "knn Test Accuracy when mfcc depth = 12 and k = 3: 0.9059322033898305\n",
+      "knn Test Accuracy when mfcc depth = 12 and k = 4: 0.9033898305084745\n",
+      "knn Test Accuracy when mfcc depth = 12 and k = 5: 0.8983050847457628\n",
+      "knn Test Accuracy when mfcc depth = 12 and k = 6: 0.8957627118644068\n",
+      "knn Test Accuracy when mfcc depth = 12 and k = 7: 0.9\n",
+      "knn Test Accuracy when mfcc depth = 12 and k = 8: 0.8940677966101694\n",
+      "knn Test Accuracy when mfcc depth = 12 and k = 9: 0.8974576271186441\n",
+      "knn Test Accuracy when mfcc depth = 12 and k = 10: 0.8949152542372881\n",
+      "knn Test Accuracy when mfcc depth = 13 and k = 1: 0.8983050847457628\n",
+      "knn Test Accuracy when mfcc depth = 13 and k = 2: 0.8915254237288136\n",
+      "knn Test Accuracy when mfcc depth = 13 and k = 3: 0.9008474576271186\n",
+      "knn Test Accuracy when mfcc depth = 13 and k = 4: 0.9033898305084745\n",
+      "knn Test Accuracy when mfcc depth = 13 and k = 5: 0.8949152542372881\n",
+      "knn Test Accuracy when mfcc depth = 13 and k = 6: 0.8974576271186441\n",
+      "knn Test Accuracy when mfcc depth = 13 and k = 7: 0.8991525423728813\n",
+      "knn Test Accuracy when mfcc depth = 13 and k = 8: 0.8966101694915254\n",
+      "knn Test Accuracy when mfcc depth = 13 and k = 9: 0.8983050847457628\n",
+      "knn Test Accuracy when mfcc depth = 13 and k = 10: 0.8932203389830509\n",
+      "knn Test Accuracy when mfcc depth = 14 and k = 1: 0.8991525423728813\n",
+      "knn Test Accuracy when mfcc depth = 14 and k = 2: 0.888135593220339\n",
+      "knn Test Accuracy when mfcc depth = 14 and k = 3: 0.8957627118644068\n",
+      "knn Test Accuracy when mfcc depth = 14 and k = 4: 0.8991525423728813\n",
+      "knn Test Accuracy when mfcc depth = 14 and k = 5: 0.8949152542372881\n",
+      "knn Test Accuracy when mfcc depth = 14 and k = 6: 0.9\n",
+      "knn Test Accuracy when mfcc depth = 14 and k = 7: 0.8991525423728813\n",
+      "knn Test Accuracy when mfcc depth = 14 and k = 8: 0.8974576271186441\n",
+      "knn Test Accuracy when mfcc depth = 14 and k = 9: 0.8991525423728813\n",
+      "knn Test Accuracy when mfcc depth = 14 and k = 10: 0.8974576271186441\n",
+      "knn Test Accuracy when mfcc depth = 15 and k = 1: 0.902542372881356\n",
+      "knn Test Accuracy when mfcc depth = 15 and k = 2: 0.8983050847457628\n",
+      "knn Test Accuracy when mfcc depth = 15 and k = 3: 0.8983050847457628\n",
+      "knn Test Accuracy when mfcc depth = 15 and k = 4: 0.8940677966101694\n",
+      "knn Test Accuracy when mfcc depth = 15 and k = 5: 0.8898305084745762\n",
+      "knn Test Accuracy when mfcc depth = 15 and k = 6: 0.8991525423728813\n",
+      "knn Test Accuracy when mfcc depth = 15 and k = 7: 0.8974576271186441\n",
+      "knn Test Accuracy when mfcc depth = 15 and k = 8: 0.8991525423728813\n",
+      "knn Test Accuracy when mfcc depth = 15 and k = 9: 0.8966101694915254\n",
+      "knn Test Accuracy when mfcc depth = 15 and k = 10: 0.8991525423728813\n"
      ]
     }
    ],
@@ -241,7 +255,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
+   "id": "ae1cba2d-461f-4ad6-81d1-ce6fb05086a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVC rbf Test Accuracy when mfcc depth = 10 and C = 10: 0.6813559322033899\n",
+      "SVC rbf Train Accuracy when mfcc depth = 10 and C = 10: 0.8889595253231617\n",
+      "SVC rbf Test Accuracy when mfcc depth = 11 and C = 10: 0.6923728813559322\n",
+      "SVC rbf Train Accuracy when mfcc depth = 11 and C = 10: 0.8953168044077136\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Runs svc rbf over the indicated C and depth of all 4 mfcc features, including Calvin's features and peak_freq\n",
+    "for C in range(10,11):\n",
+    "    for depth in range(10,12):\n",
+    "        print(f\"SVC rbf Test Accuracy when mfcc depth = {depth} and C = {C}: {SVC_rbf_test_acc(df,C,depth,depth,0,0,True,True,False)}\")\n",
+    "        print(f\"SVC rbf Train Accuracy when mfcc depth = {depth} and C = {C}: {SVC_rbf_train_acc(df,C,depth,depth,0,0,True,True,False)}\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "8bfeb69e-6100-424c-901e-bc77dfc26685",
    "metadata": {},
    "outputs": [
@@ -249,24 +288,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVC rbf Test Accuracy when mfcc depth = 10 and C = 10: 0.6932203389830508\n",
-      "SVC rbf Test Accuracy when mfcc depth = 11 and C = 10: 0.6889830508474576\n",
-      "SVC rbf Test Accuracy when mfcc depth = 12 and C = 10: 0.7042372881355933\n",
-      "SVC rbf Test Accuracy when mfcc depth = 13 and C = 10: 0.7076271186440678\n",
-      "SVC rbf Test Accuracy when mfcc depth = 14 and C = 10: 0.6991525423728814\n",
-      "SVC rbf Test Accuracy when mfcc depth = 15 and C = 10: 0.7\n",
-      "SVC rbf Test Accuracy when mfcc depth = 16 and C = 10: 0.6932203389830508\n",
-      "SVC rbf Test Accuracy when mfcc depth = 17 and C = 10: 0.6872881355932203\n",
-      "SVC rbf Test Accuracy when mfcc depth = 18 and C = 10: 0.6872881355932203\n",
-      "SVC rbf Test Accuracy when mfcc depth = 19 and C = 10: 0.6974576271186441\n"
+      "SVC rbf Test Accuracy when mfcc depth = 10 and C = 10: 0.6423728813559322\n",
+      "SVC rbf Train Accuracy when mfcc depth = 10 and C = 10: 0.8554778554778555\n",
+      "SVC rbf Test Accuracy when mfcc depth = 11 and C = 10: 0.6610169491525424\n",
+      "SVC rbf Train Accuracy when mfcc depth = 11 and C = 10: 0.8679805043441408\n"
      ]
     }
    ],
    "source": [
     "#Runs svc rbf over the indicated C and depth of all 4 mfcc features, including Calvin's features and peak_freq\n",
     "for C in range(10,11):\n",
-    "    for depth in range(10,20):\n",
-    "        print(f\"SVC rbf Test Accuracy when mfcc depth = {depth} and C = {C}: {SVC_rbf_test_acc(df,C,depth,depth,depth,depth,True,True,False)}\") "
+    "    for depth in range(10,12):\n",
+    "        print(f\"SVC rbf Test Accuracy when mfcc depth = {depth} and C = {C}: {SVC_rbf_test_acc(df,C,0,0,depth,depth,True,True,False)}\")\n",
+    "        print(f\"SVC rbf Train Accuracy when mfcc depth = {depth} and C = {C}: {SVC_rbf_train_acc(df,C,0,0,depth,depth,True,True,False)}\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "17fc5581-dc26-4be7-ad22-718cb4323708",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVC rbf Test Accuracy when mfcc depth = 10 and C = 10: 0.6932203389830508\n",
+      "SVC rbf Train Accuracy when mfcc depth = 10 and C = 10: 0.9146005509641874\n",
+      "SVC rbf Test Accuracy when mfcc depth = 11 and C = 10: 0.6889830508474576\n",
+      "SVC rbf Train Accuracy when mfcc depth = 11 and C = 10: 0.9226531044712863\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Runs svc rbf over the indicated C and depth of all 4 mfcc features, including Calvin's features and peak_freq\n",
+    "for C in range(10,11):\n",
+    "    for depth in range(10,12):\n",
+    "        print(f\"SVC rbf Test Accuracy when mfcc depth = {depth} and C = {C}: {SVC_rbf_test_acc(df,C,depth,depth,depth,depth,True,True,False)}\")\n",
+    "        print(f\"SVC rbf Train Accuracy when mfcc depth = {depth} and C = {C}: {SVC_rbf_train_acc(df,C,depth,depth,depth,depth,True,True,False)}\") "
    ]
   },
   {
